2001-01-14  Charles 'Buck' Krasic  <krasic@acm.org>
	* Add command line option interface to playdv, using popt.

	* Add more audio code structure; pre-emphasis, speed detection
	  (only play normal speed audio).

	* Header file re-structuring.  Move types to new dv_types.h;
	  enclose declarations in extern "C" for C++ compatibility;
	  replace leading '_' from preprocessor symbols with 'DV_'
	  prefix.  

	* Add exit() handler to avoid Sys V shmem leak with Xv.  (Still
	  have to do SDL, and gtk).

	* Add _GNU_SOURCE define, enabling large (>2GB) file support.
	
2001-01-08  Charles 'Buck' Krasic  <krasic@acm.org>

	* Add preliminary support for audio.  New files are audio.[ch]
	  which does the unshuffling, and oss.[ch] which is provides an
	  example of playout via the OSS sound API.
 
2000-12-27  Peter Schlaile <udbz@rz.uni-karlsruhe.de>
	* Integrated MMX/ASM-optimizations into the encoder. 
	  (YUV, DCT88, quant)
	  The YUV conversion is 2 bits more accurate than before, the DCT
	  is somewhat less accurate (approximately 1 or 2 bits) so it
	  should be more or less the same as the old C code. Best thing:
	  it is 8 times faster now!
	
2000-12-21  Charles 'Buck' Krasic  <krasic@acm.org>

	* Applied outstanding patch submissions.  The major parts included
	getting the encoder to build again, and autotool'ing the build.
	This ChangeLog files is far from complete.  The log
	information in CVS is where most of the changes are documented.
 
2000-05-08  Charlie Krasic  <krasic@cse.ogi.edu>

	* Moved to macroblock at a time color conversion, based on the work
 	  of Scott F. Johnston <scott@fleetingimage.com>.  I rewrote his
 	  shuffle code.  Partly so I could understand it better (I added
 	  lots of comments), and also I did the PAL version too.  I decided
 	  to leave mapping between dif blocks/segments and superblock
 	  row/columns to the parse code.  I took his block at a time ycrcb
 	  conversion directly, except for making clamp_y lookup based.
