@@ -7,3 +7,4 @@ Scott F. Johnston <scott@fleetingimage.com>
 Stefan Lucke <lucke@berlin.snafu.de>
 Daniel Kobras <kobras@tat.physik.uni-tuebingen.de> 
 Peter Schlaile <udbz@rz.uni-karlsruhe.de>
+Arne Schirmacher <arne@schirmacher.de>
